V2.0/Firmware/PSU_FW/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
21:51:42 **** Incremental Build of configuration Debug for project PSW_FW_F410RB_RTOS ****
make -j7 all 
arm-none-eabi-gcc "../Core/Src/analog.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F410Rx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Middlewares/Third_Party/FreeRTOS/Source/include -I../Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS_V2 -I../Middlewares/Third_Party/FreeRTOS/Source/portable/GCC/ARM_CM4F -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/analog.d" -MT"Core/Src/analog.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/analog.o"
arm-none-eabi-gcc -o "PSW_FW_F410RB_RTOS.elf" @"objects.list"   -mcpu=cortex-m4 -T"/Users/adityasehgal/Documents/GitHub/Bench_Power_Supply/V2.0/Firmware/PSU_FW/PSW_FW_F410RB_RTOS/STM32F410RBTX_FLASH.ld" --specs=nosys.specs -Wl,-Map="PSW_FW_F410RB_RTOS.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -u _printf_float -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: PSW_FW_F410RB_RTOS.elf
 
arm-none-eabi-objdump -h -S  PSW_FW_F410RB_RTOS.elf  > "PSW_FW_F410RB_RTOS.list"
arm-none-eabi-objcopy  -O binary  PSW_FW_F410RB_RTOS.elf  "PSW_FW_F410RB_RTOS.bin"
arm-none-eabi-size   PSW_FW_F410RB_RTOS.elf 
   text	   data	    bss	    dec	    hex	filename
  59476	    496	  22312	  82284	  1416c	PSW_FW_F410RB_RTOS.elf
Finished building: default.size.stdout
 
Finished building: PSW_FW_F410RB_RTOS.bin
 
Finished building: PSW_FW_F410RB_RTOS.list
 
21:54:48 **** Incremental Build of configuration Debug for project PSW_FW_F410RB_RTOS ****
make -j7 all 
arm-none-eabi-gcc "../Core/Src/analog.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F410Rx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Middlewares/Third_Party/FreeRTOS/Source/include -I../Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS_V2 -I../Middlewares/Third_Party/FreeRTOS/Source/portable/GCC/ARM_CM4F -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/analog.d" -MT"Core/Src/analog.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/analog.o"
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F410Rx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Middlewares/Third_Party/FreeRTOS/Source/include -I../Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS_V2 -I../Middlewares/Third_Party/FreeRTOS/Source/portable/GCC/ARM_CM4F -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/analog.c: In function 'analogReadIOut':
../Core/Src/analog.c:33:6: error: 'retVal' undeclared (first use in this function)
   33 |  if (retVal <= 30)
      |      ^~~~~~
../Core/Src/analog.c:33:6: note: each undeclared identifier is reported only once for each function it appears in
make: *** [Core/Src/subdir.mk:55: Core/Src/analog.o] Error 1
make: *** Waiting for unfinished jobs....
"make -j7 all" terminated with exit code 2. Build might be incomplete.
21:55:03 **** Incremental Build of configuration Debug for project PSW_FW_F410RB_RTOS ****
make -j7 all 
arm-none-eabi-gcc "../Core/Src/analog.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F410Rx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Middlewares/Third_Party/FreeRTOS/Source/include -I../Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS_V2 -I../Middlewares/Third_Party/FreeRTOS/Source/portable/GCC/ARM_CM4F -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/analog.d" -MT"Core/Src/analog.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/analog.o"
../Core/Src/analog.c: In function 'analogReadIOut':
../Core/Src/analog.c:34:3: error: 'retVal' undeclared (first use in this function)
   34 |   retVal = 0;
      |   ^~~~~~
../Core/Src/analog.c:34:3: note: each undeclared identifier is reported only once for each function it appears in
make: *** [Core/Src/subdir.mk:55: Core/Src/analog.o] Error 1
"make -j7 all" terminated with exit code 2. Build might be incomplete.
21:55:10 **** Incremental Build of configuration Debug for project PSW_FW_F410RB_RTOS ****
make -j7 all 
arm-none-eabi-gcc "../Core/Src/analog.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F410Rx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Middlewares/Third_Party/FreeRTOS/Source/include -I../Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS_V2 -I../Middlewares/Third_Party/FreeRTOS/Source/portable/GCC/ARM_CM4F -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/analog.d" -MT"Core/Src/analog.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/analog.o"
arm-none-eabi-gcc -o "PSW_FW_F410RB_RTOS.elf" @"objects.list"   -mcpu=cortex-m4 -T"/Users/adityasehgal/Documents/GitHub/Bench_Power_Supply/V2.0/Firmware/PSU_FW/PSW_FW_F410RB_RTOS/STM32F410RBTX_FLASH.ld" --specs=nosys.specs -Wl,-Map="PSW_FW_F410RB_RTOS.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -u _printf_float -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: PSW_FW_F410RB_RTOS.elf
 
arm-none-eabi-objdump -h -S  PSW_FW_F410RB_RTOS.elf  > "PSW_FW_F410RB_RTOS.list"
arm-none-eabi-objcopy  -O binary  PSW_FW_F410RB_RTOS.elf  "PSW_FW_F410RB_RTOS.bin"
arm-none-eabi-size   PSW_FW_F410RB_RTOS.elf 
   text	   data	    bss	    dec	    hex	filename
  60036	    496	  22312	  82844	  1439c	PSW_FW_F410RB_RTOS.elf
Finished building: default.size.stdout
 
Finished building: PSW_FW_F410RB_RTOS.bin
 
Finished building: PSW_FW_F410RB_RTOS.list
 
